# voice-typing

./: .gitignore  README.md  pyproject.toml  requirements.txt  runtime_test_runner.py
diagnostics/: README.md  cublas_fallback.py  diagnose_f2.py  runtime_proof.py
docs/superpowers/plans/: 2026-04-24-settings-ux.md  2026-04-24-streaming-transcription.md
docs/superpowers/specs/: 2026-04-24-settings-ux-design.md  2026-04-24-streaming-transcription-design.md
tests/: test_app.py  test_clipboard.py  test_config.py  test_focus.py  test_hotkeys.py  test_hotkeys_win32.py  test_platform.py  test_recording.py  test_settings.py  test_streaming.py  test_text_cleanup.py  test_transcription.py  test_tray.py
voice_typer/: __init__.py  __main__.py  app.py  clipboard.py  config.py  focus.py  hotkeys.py  platform.py  recording.py  settings.py  streaming.py  text_cleanup.py  transcription.py  tray.py
